--- a/Index.html
+++ b/Index.html
@@ -26,5 +26,19 @@
         interference .......1940's - Communication security period.........1970's - Information security period......1990's - Information
         assuarance period........Today - Cybersecurity period
     </p>
+    <h2>Communication Security Period</h2>
+    <p>Information system security was limited to ensuring physical security of information and confidentiality</p>
+    <h2>Information Security Period</h2>
+    <p>Entered into practical and large-scale use stage and data transmision could be completed through computer networks
+        . Its main objective was to ensure Integrity, Availabilty and Confidentiality. (IAC).
+    </p>
+    <h2>Cyberspace Security Space</h2>
+
+    <h1>Significance of Building Network Security</h1>
+    <ul>
+        <li>Importance</li>
+        <li>Compliance....comply with the policies</li>
+        <li>Profitability</li>
+    </ul>
 </body>
 </html>
