--- a/Index.html
+++ b/Index.html
@@ -40,5 +40,14 @@
         <li>Compliance....comply with the policies</li>
         <li>Profitability</li>
     </ul>
+    <h2>Network Security Threats</h2>
+    <ul>
+        <li>Hackers</li>
+        <li>Vulnerabilities</li>
+        <li>Ransomware attacks</li>
+        <li>Information breach</li>
+        <li>DDoS attacks</li>
+        <li>Supply chain threats and attacks</li>
+    </ul>
 </body>
 </html>
