--- a/Index.html
+++ b/Index.html
@@ -49,5 +49,19 @@
         <li>DDoS attacks</li>
         <li>Supply chain threats and attacks</li>
     </ul>
+    <h1>Network Security Situational Awareness</h1>
+    <p>HiSec Insight is deployed on enterprise network to connect basic network data such as traffic and device logs using the flow prob</p>
+     <h1>Zero Trust Security</h1>
+     <p>Its a set of evolving network security paradigms that shift network defense from static network bounderies to users</p>
+     <h1>Significance of Unfrmation Security Standards</h1>
+     <p>They are</p>
+     <p>International Organization include</p>
+     <h1>Common Information Security Standards and Specfications</h1>
+     <ul>
+        <li>Cybersecurity Classified Protection System .......protects information and information carriers</li>
+        <li>ISO 27001....is the international standard for an information security management system</li>
+        <li>TCSEC....Trusted Computer System Evaluation Criteria is proposed by the Defense Science Board</li>
+        <li>ITSE....Information Technology SEC...flexibility</li>
+     </ul>
 </body>
 </html>
