--- a/Index.html
+++ b/Index.html
@@ -63,5 +63,18 @@
         <li>TCSEC....Trusted Computer System Evaluation Criteria is proposed by the Defense Science Board</li>
         <li>ITSE....Information Technology SEC...flexibility</li>
      </ul>
+     <h1>Project Implementation Methodology Procedure</h1>
+     <h1>Definition of Cybersecurity Classified Protection</h1>
+     <p>Protects information and information carriers based on their importance levels</p>
+     <h1>Significance of Cybersecurity Classified Protection</h1>
+     <ul>
+        <li>Legal and regulatory complience</li>
+        <li>Security systemization</li>
+        <li>Security Awareness improvement</li>
+        <li>Service Security Requirements</li>
+     </ul>
+     <h1>IP Data Encyption and Authentication</h1>
+     <p>IPsec provides two security mechanisms ..that is encryption and authentication</p>
+     <h1>IKE...Internet Key Exchange</h1>
 </body>
 </html>
