--- a/Index.html
+++ b/Index.html
@@ -76,5 +76,28 @@
      <h1>IP Data Encyption and Authentication</h1>
      <p>IPsec provides two security mechanisms ..that is encryption and authentication</p>
      <h1>IKE...Internet Key Exchange</h1>
+
+     <br>
+     <br>
+     <h1>Firewall </h1>
+     <h2>Background of Hot Standby Technologies</h2>
+     <p>All packets exchange between intranet and internet users pass through firewall</p>
+     <h2>Virtual Router Redudancy Protocol</h2>
+     <h2>VRRP-based Router Redudancy Deployment</h2>
+     <p>Here we have a backup router that can replace a faulty master router</p>
+     <h2>VRRP Application in Multi-Zone Firewall Networking</h2>
+     <p>When the hot standby is required for firewalls in multiple zones, you need to configure multiple VRRP groups</p>
+     <h2>Defects of VRRP</h2>
+     <p>Traditinal VRRP cannot ensure the state of information consistency and VRRP status consistency</p>
+     <h2>VGMP Basic Principles</h2>
+     <p>Virtual Group Management Protocol 1.....It manages the status of all VRRP groups in a unified manner to ensure the consistent VRRP 
+        groups status
+     </p>
+     <h1>VGMP Group Management</h1>
+     <ul>
+        <li>Status consistency Management.....controls the status switchover of all VRRP groups in an unified manner</li>
+        <li>Preemption Management...when the active device recovers, the priority of its VGMP group is also restored</li>
+        <li>Channel Management.....determines available interfaces between two firewalls</li>
+     </ul>
 </body>
 </html>
